--- a/LendingSystem/Content/Site.css
+++ b/LendingSystem/Content/Site.css
@@ -9,16 +9,15 @@
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
+@media(min-width: 768px)
+{
+    .dl-horizontal dt {
+        width: 170px;
+        margin-top: 6.5px;
+    }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+    .dl-horizontal dd {
+        margin-left: 200px;
+        margin-bottom: 7px;
+    }
 }
