--- a/LendingSystem/Content/Site.css
+++ b/LendingSystem/Content/Site.css
@@ -9,15 +9,54 @@
     padding-right: 15px;
 }
 
-@media(min-width: 768px)
-{
-    .dl-horizontal dt {
-        width: 170px;
-        margin-top: 6.5px;
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+.dl-horizontal dt {
+    margin-top: 6.5px;
+}
+
+.dl-horizontal dd {
+    margin-bottom: 7px;
+}
+
+.wj-dropdown {
+    color: #000;
+    padding-left: 3px;
+    display: block;
+    width: 100%;
+    height: 34px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.wj-control[disabled] {
+    opacity: 10;
+    background-color: #eee;
+    cursor: not-allowed;
+}
+
+    .wj-control[disabled] .wj-form-control {
+        pointer-events: none;
+        cursor: not-allowed;
     }
 
-    .dl-horizontal dd {
-        margin-left: 200px;
-        margin-bottom: 7px;
+    .wj-control[disabled] .wj-btn {
+        pointer-events: none;
+        cursor: not-allowed;
     }
+
+input[disabled] {
+    cursor: not-allowed;
 }
+
