--- a/LendingSystem/Views/Software/LoanList.cshtml
+++ b/LendingSystem/Views/Software/LoanList.cshtml
@@ -7,5 +7,43 @@
     <h4>List of all loans</h4>
     <hr />
 
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <a href="/Software" class="btn btn-default">Back</a>
+            <button class="btn btn-primary" onclick="buttonClickAddLoan()">Apply</button>
+            <button class="btn btn-success" onclick="buttonReferesh()">Refresh</button>
+        </div>
+        <div class="panel-body">
+
+            <form role="form">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label>Date Start</label>
+                            <input class="form-control" />
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label>Date End</label>
+                            <input class="form-control" />
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Status</label>
+                            <input class="form-control" />
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
+                </div>
+            </form>
+
+            <div id="wijmoGridLoanList"></div>
+        </div>
+    </div>
+
 </div>
 
